--- a/SORULAR/018.md
+++ b/SORULAR/018.md
@@ -14,3 +14,8 @@ int main(void)
 	printf("%d%d%d", x, y, z);
 }
 ```
+z = 0 olarak initialize edilir.
+--x ifadesi ile x = 0 olur. 
+++y ifadesi ile y = 0 olur.
+son durum  x, y, z değerleri 0'dır.
+çıktı -> 000
