--- a/SORULAR/021.md
+++ b/SORULAR/021.md
@@ -22,14 +22,16 @@ int main(void)
 	printf("%d\n", x);
 	printf("%d\n", z);
 
-	return 0;
+
+/*	return 0;
 ÇIKTI
-1  
-1
-2
-0
-3
-0
+	1  
+	1
+	2
+	0
+	3
+	0
+*/
 }
 ```
 
