--- a/SORULAR/021.md
+++ b/SORULAR/021.md
@@ -23,14 +23,15 @@ int main(void)
 	printf("%d\n", z);
 
 
-/*	return 0;
+	return 0;
+/*
 ÇIKTI
-	1  
-	1
-	2
-	0
-	3
-	0
+	1    //x = 1, y = 1, z = 0
+	1    //x || (y! && z) = 1 || (0 && 0) = 1
+	2    //x = 2, y = 1, z = 0
+	0    //x = 2, y = 1, z = 0
+	3    //x = 3, y = 2, z = 0
+	0    //x = 3, y = 2, z = 0
 */
 }
 ```
